# PyConKR2023-ModelServing-BentoML

./: README.md  pyproject.toml
fraud_detection_distributed_runner/: IEEE-CIS-Fraud-Detection.ipynb  __main__.py.pclprof  bentoml.pclprof  inference_client.py  ppp.py  ppp.py.pclprof  sample.py  service.py
fraud_detection_distributed_runner/benchmark/: locustfile.py
iris_classify/: graph.py  heavy_pandas_profiling.py  heavy_pandas_profiling.py.pclprof  inference_client.py  profilng_bento.py  profilng_bento.py.pclprof  service.py
pytorch_mnist/: asdf.py  service.py
sample_bento/: bentofile.yaml  configuration.yaml  middleware.py  profile.html  profile.json  profiling_bento.py  profiling_bento2.py  sample_bentoml_train.py  service.py  test_sample_bentoml_inference.py
sample_profiling/: hello.py  profile.html  profile.json
sample_withoutbento/: sample_inference.py  sample_train.py
