[tool.poetry]
name = "pyconkr2023-modelserving"
version = "0.1.0"
description = ""
authors = ["kimsoungryoul <kimsoungryoul@gmail.com>"]
readme = "README.md"
packages = [{include = "pyconkr2023_modelserving"}]

[tool.poetry.dependencies]
python = "3.10.9"
bentoml = {extras = ["io-json", "io-pandas"], version = "^1.0.23"}
torch = "^2.0.1"
pytorch-lightning = "^2.0.4"
scalene = "^1.5.21.4"
scikit-learn = "^1.3.0"
line-profiler-pycharm = "^1.1.0"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
